[package]
name = "pinger"
version = "0.9.1"
authors = ["Denis Brodbeck <go.github@darker.red>"]
repository = "https://github.com/denisbrodbeck/pinger"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6", features = ["unstable"] }
chrono = "0.4"
csv = "1.1"
structopt = { version = "0.3", default-features = false }
winping = "0.10"
